--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "jot-cards",
+  "name": "nova-forms",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -65,5 +67,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "sharp": "0.33.1",
     "tailwindcss": "^3.4.6"
+  },
+  "peerDependencies": {
+     "react": "^18.0.0"
   }
 }
