--- a/package.json
+++ b/package.json
@@ -1,74 +1,49 @@
 {
   "name": "nova-forms",
   "version": "0.1.0",
-  "private": true,
-  "main": "src/index.js",
+  "description": "Dynamic React forms with JSON schema, modifiers, and subforms",
+  "main": "dist/nova-forms.cjs.js",
+  "module": "dist/nova-forms.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "browserslist": "defaults, not ie <= 11",
+  "keywords": [
+    "react",
+    "forms",
+    "dynamic-forms",
+    "json-schema",
+    "react-components",
+    "form-builder",
+    "validation",
+    "subforms"
+  ],
+  "author": "Jonathon McClendon",
+  "license": "MIT",
   "dependencies": {
-    "@headlessui/react": "^2.1.0",
-    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.3",
-    "@mantine/core": "^7.15.2",
-    "@mantine/hooks": "^7.15.2",
-    "@mantine/rte": "^5.10.5",
-    "@next/font": "^14.2.15",
-    "@stripe/stripe-js": "^5.4.0",
-    "@supabase/supabase-js": "^2.5.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "aos": "^2.3.4",
-    "autoprefixer": "^10.4.12",
-    "axios": "^1.7.9",
-    "chart.js": "^4.4.4",
-    "classnames": "^2.5.1",
-    "clsx": "^2.1.0",
-    "cookies-next": "^5.1.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.0.11",
-    "html2canvas": "^1.4.1",
-    "html2pdf.js": "^0.10.3",
-    "html5-qrcode": "^2.3.8",
-    "lucide-react": "^0.539.0",
-    "next": "^14.0.4",
-    "next-sitemap": "^4.2.3",
-    "primereact": "^10.8.2",
-    "qr-code-styling": "^1.9.1",
-    "qrcode": "^1.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
-    "react-joyride": "^2.9.3",
-    "react-markdown": "^10.1.0",
-    "react-slick": "^0.30.2",
-    "signature_pad": "^5.1.1",
-    "slick-carousel": "^1.8.1",
-    "stripe": "^17.5.0",
-    "tailwindcss": "^3.4.1",
-    "uuid": "^11.0.5"
+    "signature_pad": "^5.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/container-queries": "^0.1.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/react": "18.3.3",
+    "@types/react": "^18.3.3",
+    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "sharp": "0.33.1",
-    "tailwindcss": "^3.4.6"
+    "tsup": "^6.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.4.20"
   },
   "peerDependencies": {
-     "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
