--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@heroicons/react": "^2.1.3",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
-    "signature_pad": "^5.1.1"
+    "signature_pad": "^5.1.1",
+    "@headlessui/react": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
